Issue #27576: Fix call order in OrderedDict.__init__().